<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hosts  Studio</string>

    <string name="activity_editor">Hosts</string>
    <string name="activity_setting">Setting</string>
    <string name="activity_project">Project</string>

    <string name="action_host_add">Add</string>
    <string name="action_host_edit">Edit</string>
    <string name="action_host_save">Save</string>
    <string name="action_host_backup">Backup</string>
    <string name="action_share">Share</string>
    <string name="action_setting">Setting</string>
    <string name="action_login">Login</string>
    <string name="action_hosts_upload">Upload</string>
    <string name="action_hosts_properties">Properties</string>
    <string name="action_hosts_history">History</string>
    <string name="action_hosts_reload">Reload</string>

    <string name="dialog_host_add_title">Add Host</string>
    <string name="dialog_host_edit_title">Edit Host</string>
    <string name="dialog_host_ip">IP Address</string>
    <string name="dialog_host_hostname">Hostname</string>
    <string name="dialog_host_comment">Comment</string>
    <string name="dialog_upload">Upload</string>
    <string name="dialog_addtoornew">Add to or New</string>
    <string name="dialog_msg_addtoornew">Add to or New this list</string>

    <string name="dialog_upload_title">Title</string>
    <string name="dialog_upload_private">Private</string>
    <string name="dialog_upload_des">Description</string>

    <string name="dialog_login_username">Username&amp;Email</string>
    <string name="dialog_login_password">Password</string>

    <string name="dialog_hosts_diy_title">DIY source</string>
    <string name="dialog_hosts_diy_summary">Input your DIY source for load hosts.\n\ne.g.\n1.http(s)://example.com/hosts\n2.file://sdcard/hosts\n3.ftp://127.0.0.1/hosts\n</string>
    <string name="dialog_hosts_diy_url">URL/Path</string>

    <string name="dialog_properties_title">Properties</string>
    <string name="dialog_properties_msg">FileName:%1$s\nPath:%2$s\nSize:%3$s\n</string>

    <string name="dialog_licenses_title">Licenses</string>

    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_updata">Updata</string>
    <string name="btn_new">New</string>
    <string name="btn_add">Add</string>
    
    <string name="list_empty">No \'hosts\' records found.</string>
    <string name="list_empty_desc">We couldn\'t find any host entry.\nFeel free to add some!</string>

    <string name="list_menu_selected">%1$d selected</string>
    <string name="list_menu_selected_none">No selected</string>
    <string name="list_menu_edit">Edit</string>
    <string name="list_menu_cut">Cut</string>
    <string name="list_menu_copy">Copy</string>
    <string name="list_menu_paste">Paste</string>
    <string name="list_menu_add">Add</string>
    <string name="list_menu_upload">Upload</string>
    <string name="list_menu_selected_delete">Delete %1$d</string>
    <string name="list_menu_delete">Delete</string>
    <string name="list_menu_toggle">Toggle</string>
    <string name="list_menu_selecte_all">Selecte All</string>
    <string name="list_menu_unselect">Unselect</string>
    <string name="list_menu_selecte_reversing">Reversing</string>
    <string name="list_menu_selecte_search">Search</string>
    <string name="list_menu_selecte_same_ips">Same Ips</string>
    <string name="list_menu_selecte_set_ip">Set Ip</string>
    <string name="list_menu_selecte_copy">Copy</string>
    <string name="list_menu_selecte_cut">Cut</string>
    <string name="list_menu_selecte_paste">Paste</string>

    <string name="batch_ips_set">Set Ips</string>

    <string name="same_ips_too_much">Too much items selected</string>

    <string name="list_error_title">Error</string>
    <string name="list_error_content">Can\'t edit hosts file, make sure you have root/SuperUser rights.\nThe app should be allowed to request super user access.</string>

    <!-- Loading messages -->
    <string name="loading">Loading…</string>
    <string name="saving">Saving…</string>
    <string name="updata">Updata…</string>

    <string name="msg_save_success">Save success</string>

    <string name="cant_get_root_access">Can\'t save hosts file, make sure you have SuperUser rights.\nThe app should be allowed to request super user access.</string>
    <string name="cant_create_temporary_hosts_file">Can\'t create temporary hosts file</string>
    <string name="failed_running_root_command">Failed running root command</string>


    <string name="toast_hosts_select">Select %1$d items</string>
    <string name="toast_hosts_cut">Cut %1$d items</string>
    <string name="toast_hosts_copy">Copy %1$d items</string>
    <string name="toast_hosts_paste">Paste %1$d items</string>
    <string name="toast_application_is_up_to_date">Application is up to date</string>

    <string name="toast_ip_is_empty">IP address is empty.</string>
    <string name="toast_ip_or_hostname_is_empty">IP address or Hostname is empty.</string>
    <string name="toast_username_or_password_is_empty">Username or Password is empty.</string>

    <string name="toast_project_title_is_empty">Project title is empty.</string>

    <string name="toast_unauthorized">Unauthorized</string>

    <string name="preference_category_general">General</string>
    <string name="preference_category_about">About</string>
    <string name="preference_category_data">Data</string>
    <string name="preference_category_project">Project</string>

    <string name="preference_application_open_source_license_title">Open Source Licenses</string>
    <string name="preference_application_open_source_license_summary">Open source libraries used in this app</string>

    <string name="preference_application_version_title">Application version</string>

    <string name="preference_help_feedback_title"><![CDATA[Help & Feedback]]></string>

    <string name="preference_reset_settings_title">Reset Settings</string>
    <string name="preference_reset_settings_summary">Reset app settings to default</string>

    <string name="preference_clear_caches_title">Clear Caches</string>

    <string name="preference_application_version_summary">[No Data]</string>

    <string name="preference_project_diy_title">DIY</string>

    <string name="preference_project_public_title">Public project</string>
    <string name="preference_project_private_title">Private project</string>

    <string name="preference_console_title">Console</string>
    <string name="preference_console_summary">Console website\nhttps://hostseditor.avosapps.com/console</string>

    <string name="preference_model_quickload_title">Quickload(20x)</string>
    <string name="preference_model_quickload_summary">Load hosts without parse before use.</string>

    <string name="preference_system_default_title">Default hosts</string>
    <string name="preference_while_list_title">While List</string>
    <string name="preference_os_info_title">Operating system</string>
    <string name="preference_os_info_summary">[No Data]</string>
    <string name="preference_application_rate_app_title">Rate App</string>
    <string name="preference_application_rate_app_summary">Share your review</string>

    <string name="prefs_app_donate">Donate</string>
    <string name="prefs_app_donate_summary">Alipay: i@gitai.me ($1)</string>

    <string name="prefs_app_version">Application version</string>
</resources>