<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.gitai.hosts.MainActivity" >
    <item
        android:id="@+id/hosts_add"
        android:showAsAction="ifRoom"
        android:title="@string/action_host_add"
        android:icon="@drawable/ic_add_white">
    </item>
    <item
        android:id="@+id/hosts_search"
        android:showAsAction="ifRoom"
        android:title="@string/list_menu_selecte_search"
        android:icon="@drawable/ic_search_white">
    </item>
    <item
        android:id="@+id/hosts_select_paste"
        android:title="@string/list_menu_selecte_paste">
    </item>
    <item
        android:id="@+id/hosts_select_all"
        android:title="@string/list_menu_selecte_all">
    </item>
    <item
        android:id="@+id/act_select"
        android:title="@string/list_menu_selected" android:enabled="false">
        <menu>
            <item
                android:id="@+id/hosts_select_cut"
                android:title="@string/list_menu_selecte_cut">
            </item>
            <item
                android:id="@+id/hosts_select_copy"
                android:title="@string/list_menu_selecte_copy">
            </item>
            <item
               android:id="@+id/hosts_select_counter"
               android:title="@string/list_menu_selecte_reversing">
           </item>
           <item
               android:id="@+id/hosts_select_none"
               android:title="@string/list_menu_unselect">
           </item>
           <item
               android:id="@+id/hosts_select_by_same_ips"
               android:title="@string/list_menu_selecte_same_ips">
           </item>
           <item
               android:id="@+id/hosts_select_delete"
               android:title="@string/list_menu_selected_delete">
           </item>
           <item
               android:id="@+id/hosts_select_toggle"
               android:title="@string/list_menu_toggle">
           </item>
           <item
               android:id="@+id/batch_ip_set"
               android:title="@string/list_menu_selecte_set_ip">
           </item>
        </menu>
    </item>
    <item
        android:id="@+id/hosts_save"
        android:title="@string/action_host_save">
    </item>
    <item
        android:id="@+id/hosts_backup"
        android:title="@string/action_host_backup">
    </item>
    <item
        android:id="@+id/hosts_upload"
        android:title="@string/action_hosts_upload">
    </item>
    <item
        android:id="@+id/hosts_properties"
        android:title="@string/action_hosts_properties">
    </item>
    <item
        android:id="@+id/hosts_history"
        android:title="@string/action_hosts_history">
    </item>
    <item
        android:id="@+id/hosts_reload"
        android:title="@string/action_hosts_reload">
    </item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_setting"/>
</menu>